# raytracer

./: .gitignore  CMakeLists.txt  LICENSE  RayTracer.sln  image.ppm
NewRaytracer/: CMakeLists.txt  NewRaytracer.cpp  NewRaytracer.h  RayTracer.cpp  RayTracer2.cpp  aabb.h  bvh.h  camera.h  color.h  hittable.h  interval.h  material.h  perlin.h  quad.h  raytracer.h  sphere.h  texture.h  triangle.h  vec3.h
RayTracer/: RayTracer.cpp  RayTracer.vcxproj  RayTracer.vcxproj.filters  RayTracer2.cpp  aabb.h  bvh.h  camera.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  raytracer.h  sphere.h  texture.h  triangle.h  vec3.h  vectorlib.hpp
RayTracer/x64/Debug/: RayTracer.exe.recipe  RayTracer.ilk  vc143.idb
RayTracer/x64/Debug/RayTracer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RayTracer.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
